Python/Tests/TestData/TestDiscoverer/SyntaxErrorUnittest/test_syntax_error_ut.py
import unittest

class TestClassSyntaxUT(unittest.TestCase):
    def test_ut_syntax(self):
        [
        pass

if __name__ == '__main__':
    unittest.main()
